conversion back to fa icons, registration back, cleaner login

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -291,7 +291,7 @@ template(name='rules_and_regs_check')
     unless rules_signed
         .ui.large.red.basic.button.sign_rules
             i.signature.icon
-            |click to sign rules and regulationss 
+            |click to sign rules and regulations
     else
         if is_admin
             a.ui.large.basic.button(href="/m/rules_regs_signing/#{rules_signed._id}/view")
