--- a/client/home.jade
+++ b/client/home.jade
@@ -9,8 +9,8 @@ template(name='home')
                 .ui.segment.set_model
                     a(href="/m/#{slug}")
                         .ui.grey.header 
-                            //- i.icon(class=icon)
-                            +i name=icon
+                            i.icon(class=icon)
+                            //- +i name=icon
                             |#{title}
 
 
