--- a/client/client.jade
+++ b/client/client.jade
@@ -6,7 +6,7 @@ head
     meta(name="msapplication-TileColor" content="#000000")
     meta(name="theme-color" content="#000000")
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css')
-    link(href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet")
+    //- link(href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet")
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
@@ -17,7 +17,7 @@ head
     script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
     script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js')
-    script(src="http://cdn.dhtmlx.com/edge/dhtmlx.js" type="text/javascript")
+    // script(src="http://cdn.dhtmlx.com/edge/dhtmlx.js" type="text/javascript") */
 
 
 template(name='layout')
