--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -23,24 +23,25 @@ template(name='rules_signing')
 
 template(name='add_guest')
     with new_guest_doc
-        .ui.fluid.button.cancel_new_guest
-            i.left.chevron.icon
-            |Back to Check In
+        .ui.fluid.big.basic.button.cancel_new_guest
+            i.left.chevron.basic.icon
+            |back to check in
         +document_view key='guest_waiver'
-        .ui.inline.header Resident: 
-        +user_card resident
-        +text_edit key='first_name' label='First Name' direct=true
-        +text_edit key='last_name' label='Last Name' direct=true
-        +text_edit key='phone' label='Phone' direct=true
-        +text_edit key='emergency_contact_name' label='Emergency Contact Name' direct=true
-        +text_edit key='emergency_contact_phone' label='Emergency Contact Phone' direct=true
-        .ui.header I agree to the Guest Waiver Terms
+        //- .ui.inline.header guest of
+        //-     +user_card resident
+        +text_edit key='guest_name' label='guest name' direct=true
+        //- +text_edit key='first_name' label='First Name' direct=true
+        //- +text_edit key='last_name' label='Last Name' direct=true
+        +text_edit key='guest_phone' label='guest phone' direct=true
+        +text_edit key='emergency_contact_name' label='emergency contact name' direct=true
+        +text_edit key='emergency_contact_phone' label='emergency contact phone' direct=true
+        .ui.header I agree to the guest waiver terms
             if agree
                 i.huge.checkmark.green.link.icon.agree
             else
                 i.huge.circle.outline.grey.icon.agree
         if agree
-            .ui.header Please sign below
+            .ui.header please sign below
             if signature_saved
                 +signature_view key='signature' direct=true
                 i.pencil.large.icon.edit_signature
