--- a/client/styles.css
+++ b/client/styles.css
@@ -49,7 +49,7 @@ body {
     width:100%;
 }
 .checkin_banner {
-    opacity: 0.4;
+    opacity: 0.2;
     -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
@@ -394,8 +394,8 @@ a {
 	/*max-height:1000px;*/
 	/*max-height:85vh;*/
 	/*padding: 1em;*/
-    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.9)), to(rgba(0,0,0,1)));
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+    /* -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.9)), to(rgba(0,0,0,1))); */
+    /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0)); */
 
 }
 .topnav::-webkit-scrollbar {
