--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -4,37 +4,38 @@ template(name='login')
             .ten.wide.column
                 .ui.center.aligned.header gold run login
                     //- i.massive.icons
-                    //-     i.home.grey.icon
+                    //-     i.home.icon
                     //-     i.corner.right.chevron.icon
                 if message
                     h4.ui.center.aligned.header #{message}
-                .ui.fluid.input(class=login_class)
-                    .ui.inline.grey.small.header 
-                        i.user.grey.icon
+                .ui.fluid.large.input(class=login_class)
+                    .ui.inline.small.header 
+                        i.user.icon
                         |username
                     input.username(type='text')
-                .ui.fluid.input(class=login_class)
-                    .ui.inline.grey.small.header 
-                        i.lock.grey.icon
+                .ui.fluid.big.input(class=login_class)
+                    .ui.inline.small.header 
+                        i.lock.icon
                         | password
                     input.password(type='password')
                 //- if username
                 if logging_in
-                    .ui.fluid.large.button.enter(title="Login #{username}" class=enter_class)
+                    .ui.fluid.big.basic.button.enter(title="Login #{username}" class=enter_class)
                         i.sign.in.alternate.icon
+                        |login
                         | #{username}
                         //- i.right.chevron.icon
-                //- else
-                //-     if username
-                //-         .ui.center.aligned.segment
-                //-             .ui.small.grey.header no '#{username}' user
-                //-             a.ui.grey.button(href='/register')
-                //-                 i.user.plus.icon
-                //-                 | Register
+                else
+                    if username
+                        .ui.center.aligned.segment
+                            .ui.small.header no '#{username}' user
+                            a.ui.basic.button(href='/register')
+                                i.user.plus.icon
+                                | register
                 .ui.center.aligned.basic.segment    
-                    a.ui.large.button(href='/forgot_password')
+                    a.ui.large.basic.button(href='/forgot_password')
                         i.refresh.icon
                         |forgot password
-                    //- a.ui.large.button(href='/register') 
-                    //-     i.user.plus.icon
-                    //-     |Register
+                    a.ui.large.basic.button(href='/register') 
+                        i.user.plus.icon
+                        |register
